# bsc-thesis

./: .gitignore  README.md  commentsbaseline.txt  design_choices.txt  factorial_results.txt  future_directions.txt  grid_robustness_note.txt  thesis_presentation.pptx
.claude/: settings.local.json
Code/: plot_comparison.py
Code/Async/T1/: A_convResults.txt
Code/Async/T10/: A_convResults.txt  A_res.txt  InfoExperiment_1.txt
Code/Async/T2/: A_convResults.txt  A_res.txt  InfoExperiment_1.txt
Code/Async/T20/: A_convResults.txt  A_res.txt  InfoExperiment_1.txt
Code/Async/T5/: A_convResults.txt  A_res.txt  InfoExperiment_1.txt
Code/Backups/: A_InputParameters.txt  A_InputParameters_original.txt
Code/Combined/F000/: A_convResults.txt
Code/Combined/F001/: A_res.txt  InfoExperiment_1.txt
Code/Combined/F010/: A_convResults.txt  InfoExperiment_1.txt
Code/Combined/F011/: A_InputParameters.txt  A_convResults.txt  A_res.txt  InfoExperiment_1.txt
Code/Combined/F100/: A_convResults.txt  A_res.txt
Code/Combined/F101/: A_convResults.txt  A_res.txt  InfoExperiment_1.txt
Code/Combined/F110/: A_convResults.txt  A_res.txt  InfoExperiment_1.txt
Code/Combined/F111/: A_convResults.txt  A_res.txt  InfoExperiment_1.txt
Code/Combined1000/F000/: A_InputParameters.txt  InfoExperiment_1.txt
Code/Combined1000/F001/: A_convResults.txt  A_res.txt  InfoExperiment_1.txt
Code/Combined1000/F010/: A_convResults.txt  A_res.txt  InfoExperiment_1.txt
Code/Combined1000/F011/: A_convResults.txt  A_res.txt  InfoExperiment_1.txt
Code/Combined1000/F100/: A_convResults.txt  A_res.txt  InfoExperiment_1.txt
Code/Combined1000/F101/: A_convResults.txt  A_res.txt  InfoExperiment_1.txt
Code/Combined1000/F110/: A_convResults.txt  A_res.txt  InfoExperiment_1.txt
Code/Combined1000/F111/: A_convResults.txt  A_res.txt  InfoExperiment_1.txt
Code/Combined500/F000/: A_InputParameters.txt  A_convResults.txt  A_res.txt  InfoExperiment_1.txt
Code/Combined500/F001/: A_convResults.txt  A_res.txt  InfoExperiment_1.txt
Code/Combined500/F010/: A_convResults.txt  A_res.txt  InfoExperiment_1.txt
Code/Combined500/F011/: A_convResults.txt  A_res.txt  InfoExperiment_1.txt
Code/Combined500/F100/: A_convResults.txt  A_res.txt  InfoExperiment_1.txt
Code/Combined500/F101/: A_convResults.txt  A_res.txt  InfoExperiment_1.txt
Code/Combined500/F110/: A_convResults.txt  A_res.txt  InfoExperiment_1.txt
Code/Combined500/F111/: A_convResults.txt  A_res.txt  InfoExperiment_1.txt
Code/Grid Robustness/m100/: A_InputParameters.txt  A_convResults.txt  A_res.txt
Code/Grid Robustness/m15/: A_convResults.txt  A_res.txt
Code/Grid Robustness/m25/: A_InputParameters.txt  A_convResults.txt  A_res.txt
Code/Grid Robustness/m50/: A_InputParameters.txt  A_convResults.txt  A_res.txt
Code/Heatmaps/: make_heatmaps.py  setup_heatmap_folders.py
Code/Latency/: plot_latency.py
Code/Latency/L1/: A_convResults.txt  A_res.txt  InfoExperiment_1.txt
Code/Latency/L10/: A_convResults.txt  A_res.txt  InfoExperiment_1.txt
Code/Latency/L2/: InfoExperiment_1.txt
Code/Latency/L20/: A_convResults.txt  A_res.txt  InfoExperiment_1.txt
Code/Latency/L3/: A_convResults.txt  A_res.txt  InfoExperiment_1.txt
Code/Latency/L5/: A_convResults.txt  A_res.txt  InfoExperiment_1.txt
Code/Noise/: extract_delta.py  plot_noise.py
Code/Noise/N0/: A_res.txt  InfoExperiment_1.txt
Code/Noise/N0p5/: A_convResults.txt  A_res.txt  InfoExperiment_1.txt
Code/Noise/N1/: A_res.txt
Code/OffPath/: analyze_playback.py  make_offpath_figure.py  resume_offpath.py  setup_offpath_folders.py
Code/Writing/: references.bib  thesis.tex
Code/ogcode/cpp conversion/: CMakeLists.txt  build_frictions.bat
Code/ogcode/cpp conversion/include/: LearningSimulationAsync.hpp  LearningSimulationCombined.hpp  LearningSimulationLatency.hpp  LearningSimulationNoise.hpp
Code/ogcode/cpp conversion/src/: LearningSimulationAsync.cpp  LearningSimulationCombined.cpp  LearningSimulationLatency.cpp  LearningSimulationNoise.cpp  main_async.cpp  main_combined.cpp  main_latency.cpp  main_noise.cpp
Thesis_writeup/: main.tex  references.bib
Thesis_writeup/figures/: make_all_figures.py  make_regression_table.py
Thesis_writeup/sections/: abstract.tex  appendix.tex  discussion.tex  introduction.tex  limitations.tex  literature.tex  methodology.tex  results_factorial.tex  results_singles.tex
(+12 files in other folders)
